tests/sksl/errors/StructNameWithoutIdentifier.glsl
### Compilation failed:

error: 2: expected an identifier, but found ';'
S;
 ^
1 error
